# setup.cfg

./: .authors  .coveragerc  .travis.yml  CHANGES  CHANGES.rst  CONTRIBUTORS  LICENSE  README  README.rst  setup.cfg  setup.py  tox.ini
d2to1/: zestreleaser.py
setup/: __init__.py
setup/cfg/: __init__.py  config.py  core.py  util.py  zestreleaser.py
setup/cfg/tests/: __init__.py  test_core.py  test_hooks.py
setup/cfg/tests/testpackage/: setup.cfg  setup.py
setup/cfg/tests/testpackage/src/: testext.c
