[metadata]
name = d2to1
version = 0.2.11.dev
author = Erik M. Bray
author-email = embray@stsci.edu
summary = Allows using distutils2-like setup.cfg files for a package's metadata with a distribute/setuptools setup.py
description-file =
    README.rst
    CHANGES.rst
home-page = http://pypi.python.org/pypi/d2to1
requires-dist = setuptools
classifier = 
    Development Status :: 5 - Production/Stable
	Environment :: Plugins
	Framework :: Setuptools Plugin
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: System :: Archiving :: Packaging

[files]
packages =
    d2to1
    d2to1.extern
extra_files =
    CHANGES.rst
    LICENSE
    ez_setup.py

[backwards_compat]
zip-safe = False
tests-require = nose

[entry_points]
distutils.setup_keywords = 
	d2to1 = d2to1.core:d2to1
zest.releaser.prereleaser.middle = 
	d2_version = d2to1.zestreleaser:prereleaser_middle
zest.releaser.postreleaser.middle = 
	d2_version = d2to1.zestreleaser:postreleaser_middle

[test]
test-suite = nose.collector

[zest.releaser]
# These zest.releaser hooks are not installed as entry points as they are only
# used for d2to1 itself--the ones that are installed as entry points are useful
# to any project that uses d2to1
releaser.middle = d2to1.zestreleaser.releaser_middle
postreleaser.before = d2to1.zestreleaser.postreleaser_before
